# SolLens

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
apps/web/: eslint.config.js  package.json  tsconfig.json  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: Dashboard.tsx  ExpressionExamples.tsx  Footer.tsx  Header.tsx  NetworkStatus.tsx  RightPanel.tsx  Sidebar.tsx  Terminal.tsx  icons.tsx
apps/web/components/tools/: AtaGenerator.tsx  DataPlayground.tsx  PdaGenerator.tsx  SeedVisualizer.tsx  ToolPrimitives.tsx
apps/web/hooks/: useWasm.ts
apps/web/lib/: constants.ts  expressions.ts  types.ts
apps/web/lib/engine/: client.ts  values.ts
crates/bindings/: Cargo.toml  package.json
crates/bindings/scripts/: build.mjs
crates/bindings/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: engine.rs  error.rs  evaluator.rs  lib.rs  metadata.rs  registry.rs  value.rs
crates/parser/src/: ast.rs  diagnostic.rs  lexer.rs  lib.rs  parser.rs  span.rs  token.rs  types.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  registry.rs
crates/runtime/src/solana/: mod.rs  pda_core.rs
crates/runtime/src/solana/decode/: account.rs  borsh.rs  events.rs  hex.rs  instruction.rs  mod.rs
crates/runtime/src/solana/functions/: ata.rs  base58.rs  decode_account.rs  decode_events.rs  decode_instruction.rs  discriminator.rs  hash.rs  helpers.rs  lamports.rs  mod.rs  pda.rs  pubkey.rs  rent.rs
scripts/: vercel-build.mjs  vercel-install.mjs
(+8 files in other folders)
