[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
parser = { path = "../parser" }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.34"
bs58 = "0.5"
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }
